# personal_bot

./: .gitignore  README.md  main.py  pyproject.toml
src/: code.py
